syntax = "proto3";

option go_package = "/;proto";
package carrel.test_proto;

service CarrelTestService {
  rpc Test(CarrelTestRequest) returns (CarrelTestResponse) {}
}


message CarrelTestRequest {
  string name = 1;
}

message CarrelTestResponse {
  string message = 1;
}